--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <h2 id="m-title">Title</h2>
           <p
             id="m-meta"
-            style="font-weight: 700; color: #0295c3; margin: 0.5rem 0 1rem 0"
+            style="font-weight: 700; color: #020c0f; margin: 0.5rem 0 1rem 0"
           ></p>
           <p id="m-desc">Description</p>
         </div>
